Update index page, add RSS feed to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}Powered by
+{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2022 Rui Qiu <br />
+Subscribe to <a href="/blog/index.xml">RSS</a> | Powered by
 <a href="https://gohugo.io/">Hugo</a>
 & <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ</a>{{ end }}
