--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,9 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2022 Rui Qiu <br />
-Subscribe to <a href="/blog/index.xml">RSS</a> | Powered by
+{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2022 Ruì Qiū <br />
+<a href="https://github.com/rexarski">github</a> |
+<a href="https://www.linkedin.com/in/rqiu">linkedin</a> |
+<a href="https://t.me/itsnopie">telegram</a> |
+<a href="https://twitter.com/rexarski">twitter</a> |
+<a href="/blog/index.xml">RSS</a> <br />
+Powered by
 <a href="https://gohugo.io/">Hugo</a>
 & <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ</a>{{ end }}
