Remove default layouts in local directory Add a placeholder (commented out) mathjax support script in custom_head.html Tweak some settings in config.toml

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,7 +3,7 @@
 <a href="https://www.linkedin.com/in/rqiu">linkedin</a> |
 <a href="https://t.me/itsnopie">telegram</a> |
 <a href="https://twitter.com/rexarski">twitter</a> |
-<a href="/blog/index.xml">RSS</a> <br />
+<a href="/blog/index.xml">rss</a> <br />
 Powered by
 <a href="https://gohugo.io/">Hugo</a>
 & <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ</a>{{ end }}
