--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,10 +1,11 @@
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Noto+Serif+SC:wght@400;500;600;700&family=Roboto+Flex:opsz,wght@8..144,400;8..144,500;8..144,600;8..144,700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Fira+Mono:wght@400;500;700&display=swap');
 
     // noto serif sc not used yet
 
     body {
-        font-family: 'Roboto Flex', sans-serif;
+        font-family: 'Chivo', sans-serif;
         margin: auto;
         padding: 20px;
         max-width: 720px;
@@ -76,8 +77,8 @@
         display: block;
         padding: 20px;
         white-space: pre-wrap;
-        font-size: 14px;
-        font-family: 'JetBrains Mono', monospace;
+        font-size: 12px;
+        font-family: 'Fira Mono', monospace;
     }
 
     div.highlight pre {
