Add backlog page, new blog post on leaving Twitter Add urls to previous year end summary post

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,9 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2022 Ruì Qiū <br />
+{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2023 Ruì Qiū <br />
+<a rel="me" href="https://mastodon.social/@rexarski">mastodon</a> |
+<a href="https://twitter.com/rexarski">twitter</a> |
+<a href="https://t.me/itsnopie">telegram</a> |
 <a href="https://github.com/rexarski">github</a> |
 <a href="https://www.linkedin.com/in/rqiu">linkedin</a> |
-<a href="https://twitter.com/rexarski">twitter</a> |
 <a href="/blog/index.xml">rss</a> <br />
 Powered by
 <a href="https://gohugo.io/">Hugo</a>
