--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,5 +6,5 @@
 <a href="{{ "/blog" | relURL }}">Blog</a>
 {{ end }}
 {{ with .Site.GetPage "/zh" }}
-<a href="{{ "/zh" | relURL }}">汉</a>
+<a href="{{ "/zh" | relURL }}">🀄</a>
 {{ end }}
