--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,5 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2023 Ruì Qiū <br />
-<a rel="me" href="https://mastodon.social/@rexarski">mastodon</a> |
-<a href="https://twitter.com/rexarski">twitter</a> |
-<a href="https://t.me/itsnopie">telegram</a> |
-<a href="https://github.com/rexarski">github</a> |
-<a href="https://www.linkedin.com/in/rqiu">linkedin</a> |
-<a href="/blog/index.xml">rss</a> <br />
+{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2023 Ruì Qiū |
+<a href="/blog/index.xml">RSS</a><br />
 Powered by
 <a href="https://gohugo.io/">Hugo</a>
 & <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ</a>{{ end }}
