--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 {{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2023 Ruì Qiū |
-<a href="/blog/index.xml">RSS</a><br />
+<a href="/index.xml">RSS</a><br />
 Powered by
 <a href="https://gohugo.io/">Hugo</a>
 & <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ</a>{{ end }}
