--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,9 +1,9 @@
-<a href="{{ "/" | relURL }}">Home</a>
+<a href="{{ "/" | relURL }}">home</a>
 {{ range .Site.Menus.main }}
 <a href="{{ .URL }}">{{ .Name }}</a>
 {{ end }}
 {{ with .Site.GetPage "/blog" }}
-<a href="{{ "/blog" | relURL }}">Blog</a>
+<a href="{{ "/blog" | relURL }}">blog</a>
 {{ end }}
 {{ with .Site.GetPage "/zh" }}
 <a href="{{ "/zh" | relURL }}">中文</a>
