--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -10,7 +10,7 @@
         padding: 20px;
         max-width: 720px;
         text-align: left;
-        background-color: #fff;
+        background-color: #fefefe;
         word-wrap: break-word;
         overflow-wrap: break-word;
         line-height: 1.5;
@@ -30,7 +30,7 @@
 
     a {
         color: #3273dc;
-        /*color: #ff5e6c;*/
+        // color: #ff5e6c;
     }
 
     .title {
@@ -131,6 +131,28 @@
         color: #8b6fcb;
     }
 
+    kbd {
+        border: 2px solid #ccc;
+        box-shadow: 2px 2px #999;
+        display: inline-block;
+        padding: 0 5px;
+        border-radius: 0.25em;
+        min-width: 1.5em;
+        text-align: center;
+        margin-right: 0.15em;
+    }
+
+    kbd:hover {
+        position: relative;
+        top: 2px;
+        left: 2px;
+    }
+
+    mark {
+        background-color: #98ff98;
+        color: #333;
+    }
+
     @media (prefers-color-scheme: dark) {
         body {
             background-color: #333;
@@ -172,6 +194,11 @@
 
         .helptext {
             color: #aaa;
+        }
+
+        mark {
+            background-color: gold;
+            color: #333;
         }
     }
 </style>
