Update Projects, Index, and Footer pages
- Update personal introduction and highlights of the year in `_index.md`
- Delete `now.md` page and related content
- Update copyright line, RSS link, and Powered By section in `footer.html`

[content/projects.md]
- Change heading from "🚀 Projects" to "Projects"
[content/_index.md]
- Update personal introduction, add highlights of the year
- Replace R code snippet with contact information and social media links
[content/now.md]
- Delete the page `now.md`
- Remove the content related to `now.md`
[layouts/partials/footer.html]
- Change the copyright line
- Change the RSS link from "RSS" to "rss"
- Change the Powered By section to a link to the source code

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,4 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}&copy; 2023 Ruì Qiū |
-<a href="/index.xml">RSS</a><br />
-Powered by
-<a href="https://gohugo.io/">Hugo</a>
-& <a href="https://github.com/janraasch/hugo-bearblog/">ʕ•ᴥ•ʔ</a>{{ end }}
+{{ if ne .Site.Params.hideMadeWithLine true }}Ruì Qiū <br />
+<a href="/index.xml">rss</a> |
+<a href="https://github.com/rexarski/rexarski.com">source</a>
+{{ end }}
