🎨 style(style.html): add vertical text orientation class 🚀 chore(_index.md): remove main menu from zh index page

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -153,6 +153,11 @@
         color: #333;
     }
 
+    .vertical {
+        writing-mode: vertical-rl;
+        text-orientation: mixed;
+    }
+
     @media (prefers-color-scheme: dark) {
         body {
             background-color: #333;
