🔥 chore(layouts): remove unused style-vertical.html partial 🎨 style(layouts): fix indentation and add comments to single.html

--- a/layouts/partials/style-vertical.html
+++ b/layouts/partials/style-vertical.html
@@ -1,6 +1,6 @@
 <style>
-    content {
-        writing-mode: vertical-rl;
+    body {
         text-orientation: mixed;
+        writing-mode: vertical-rl;
     }
 </style>
