--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,6 @@
-{{ define "main" }} {{ if eq .Type "blog" "zh" }} {{ if not .Params.menu }} {{
-if eq .Type "zh" }} {{- partial "style-vertical.html" . -}} {{ end }}
+{{ define "main" }} {{ if eq .Type "blog" "zh" }} {{ if not .Params.menu }}
+
+<!-- {{ if eq .Type "zh" }} {{- partial "style-vertical.html" . -}} {{ end }} -->
 
 <h1>{{ .Title }}</h1>
 <p>
