--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -153,9 +153,11 @@
         color: #333;
     }
 
-    .vertical {
-        writing-mode: vertical-rl;
-        text-orientation: mixed;
+    .avatar {
+        vertical-align: center;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
     }
 
     @media (prefers-color-scheme: dark) {
