--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,6 +1,5 @@
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
-    @import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Fira+Mono:wght@400;500;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Fira+Mono:wght@400;500;700&display=swap&family=Eczar:wght@400;500;600;700');
 
     // noto serif sc not used yet
 
@@ -36,6 +35,7 @@
     .title {
         text-decoration: none;
         border: 0;
+        font-family: Fira Mono, monospace;
     }
 
     .title span {
