--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,7 @@
 <a href="{{ "/" | relURL }}">home</a>
-{{ range .Site.Menus.main }}
+<!-- {{ range .Site.Menus.main }}
 <a href="{{ .URL }}">{{ .Name }}</a>
-{{ end }}
+{{ end }} -->
 {{ with .Site.GetPage "/blog" }}
 <a href="{{ "/blog" | relURL }}">blog</a>
 {{ end }}
