[UPDATE] update home page info
- update avatar style and font style
- update footer name

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}Ruì Qiū <br />
+{{ if ne .Site.Params.hideMadeWithLine true }}Qiū Ruì<br />
 <a href="/index.xml">rss</a> |
 <a href="https://github.com/rexarski/rexarski.com">source</a>
 {{ end }}
