--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,5 +1,5 @@
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Chivo:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Fira+Mono:wght@400;500;700&display=swap&family=Eczar:wght@400;500;600;700');
+    @import url('https://fonts.googleapis.com/css2?family=Chivo&family=Fira+Mono&display=swap&family=Wavefont:wght@200');
 
     // noto serif sc not used yet
 
@@ -155,8 +155,8 @@
 
     .avatar {
         vertical-align: center;
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 50px;
         border-radius: 50%;
     }
 
