[UPDATE] replace rexarski.com with rqiu.dev as primary domain

--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,6 +1,6 @@
 <script
     src="https://utteranc.es/client.js"
-    repo="rexarski/rexarski.com"
+    repo="rexarski/rqiu.dev"
     issue-term="pathname"
     theme="preferred-color-scheme"
     crossorigin="anonymous"
