--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,5 @@
-{{ if ne .Site.Params.hideMadeWithLine true }}Qiū Ruì<br />
-<a href="/index.xml">rss</a> |
-<a href="https://github.com/rexarski/rqiu.dev">source</a>
+{{ if ne .Site.Params.hideMadeWithLine true }} <a href="/index.xml">rss</a> |
+<a href="https://github.com/rexarski/rqiu.dev">source</a><br />
+rqiu.dev ♥️
+<a href="https://github.com/janraasch/hugo-bearblog">hugo 🧸</a>
 {{ end }}
