--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,9 +2,6 @@
 <!-- {{ range .Site.Menus.main }}
 <a href="{{ .URL }}">{{ .Name }}</a>
 {{ end }} -->
-{{ with .Site.GetPage "/blog" }}
-<a href="{{ "/blog" | relURL }}">blog</a>
-{{ end }}
-{{ with .Site.GetPage "/zh" }}
-<a href="{{ "/zh" | relURL }}">中文</a>
+{{ with .Site.GetPage "/posts" }}
+<a href="{{ "/posts" | relURL }}">posts</a>
 {{ end }}
