[UPDATE] update umami tracker code in base html

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,8 +3,8 @@
     <head>
         <script
             async
-            src="https://us.umami.is/script.js"
-            data-website-id="03ab2d33-1e07-4e5d-b9c9-4ad4d9dd682f"
+            src="https://umami.rexarski.com/script.js"
+            data-website-id="f59714b4-4a2e-4e92-9ba3-2455ab6079b6"
         ></script>
         <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
         <meta charset="utf-8" />
