--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,8 +1,16 @@
 <script
-    src="https://utteranc.es/client.js"
-    repo="rexarski/rqiu.dev"
-    issue-term="pathname"
-    theme="preferred-color-scheme"
+    src="https://giscus.app/client.js"
+    data-repo="rexarski/rqiu.dev"
+    data-repo-id="R_kgDOHY-rYg"
+    data-category="Announcements"
+    data-category-id="DIC_kwDOHY-rYs4CclNh"
+    data-mapping="url"
+    data-strict="1"
+    data-reactions-enabled="1"
+    data-emit-metadata="0"
+    data-input-position="top"
+    data-theme="preferred_color_scheme"
+    data-lang="en"
     crossorigin="anonymous"
     async
 ></script>
