[UPDATE] revert domain to rexarski.com and migrate zh posts back

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,4 @@
-{{ define "main" }} {{ if eq .Type "posts" }} {{ if not .Params.menu }}
-
+{{ define "main" }} {{ if eq .Type "blog" "zh" }} {{ if not .Params.menu }}
 <h1>{{ .Title }}</h1>
 <p>
     <i>
