--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 {{ if ne .Site.Params.hideMadeWithLine true }} <a href="/index.xml">rss</a> |
-<a href="https://github.com/rexarski/rqiu.dev">source</a><br />
-rqiu.dev ♥️
-<a href="https://github.com/janraasch/hugo-bearblog">hugo 🧸</a>
+<a href="https://github.com/rexarski/rexarski.com">source</a><br />
+rexarski ♥️
+<a href="https://gohugo.io/">hugo</a> &
+<a href="https://github.com/janraasch/hugo-bearblog">🧸</a>
 {{ end }}
