--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,10 @@
 <a href="{{ "/" | relURL }}">home</a>
-<!-- {{ range .Site.Menus.main }}
+{{ range .Site.Menus.main }}
 <a href="{{ .URL }}">{{ .Name }}</a>
-{{ end }} -->
+{{ end }}
 {{ with .Site.GetPage "/posts" }}
 <a href="{{ "/posts" | relURL }}">posts</a>
+{{ end }}
+{{ with .Site.GetPage "/zh" }}
+<a href="{{ "/zh" | relURL }}">博文</a>
 {{ end }}
