[UPDATE] update giscus id, umami tracking id, and netlify deployment badge

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,9 +2,9 @@
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
     <head>
         <script
-            async
-            src="https://umami.rexarski.com/script.js"
-            data-website-id="f59714b4-4a2e-4e92-9ba3-2455ab6079b6"
+            defer
+            src="https://umami.rexarski.com/custom"
+            data-website-id="156bc33a-f878-4e44-baea-33fed8f0f357"
         ></script>
         <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
         <meta charset="utf-8" />
