--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,16 +1,17 @@
 <script
     src="https://giscus.app/client.js"
-    data-repo="rexarski/rqiu.dev"
+    data-repo="rexarski/rexarski.com"
     data-repo-id="R_kgDOHY-rYg"
-    data-category="Announcements"
-    data-category-id="DIC_kwDOHY-rYs4CclNh"
-    data-mapping="url"
-    data-strict="1"
+    data-category="General"
+    data-category-id="DIC_kwDOHY-rYs4CclNi"
+    data-mapping="title"
+    data-strict="0"
     data-reactions-enabled="1"
     data-emit-metadata="0"
     data-input-position="top"
     data-theme="preferred_color_scheme"
     data-lang="en"
+    data-loading="lazy"
     crossorigin="anonymous"
     async
 ></script>
