--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,8 +3,8 @@
     <head>
         <script
             defer
-            src="https://umami.rexarski.com/custom"
-            data-website-id="156bc33a-f878-4e44-baea-33fed8f0f357"
+            src="https://us.umami.is/script.js"
+            data-website-id="13230151-96f3-4625-bcd1-04f0046fb02d"
         ></script>
         <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
         <meta charset="utf-8" />
