[ADD] blog post on setapp migration
- add tech stack in README
- modify blog title and copyright
- update home page, avatar
- reorder contents on ideas page
- simplify footer
- add magick.css script in baseof.html

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,4 @@
-{{ if ne .Site.Params.hideMadeWithLine true }} <a href="/index.xml">rss</a> |
-<a href="https://github.com/rexarski/rexarski.com">source</a><br />
-rexarski ♥️
-<a href="https://gohugo.io/">hugo</a> &
-<a href="https://github.com/janraasch/hugo-bearblog">🧸</a>
+{{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-2024 ⋅
+<a href="/index.xml">rss</a> ⋅
+<a href="https://github.com/rexarski/rexarski.com">source</a>
 {{ end }}
