--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,8 +6,9 @@
             src="https://us.umami.is/script.js"
             data-website-id="13230151-96f3-4625-bcd1-04f0046fb02d"
         ></script>
-        <link rel="stylesheet" href="https://unpkg.com/normalize.css" />
-        <link rel="stylesheet" href="https://unpkg.com/magick.css" />
+        <!-- Custom version of magick.css -->
+        <link rel="stylesheet" href="/css/normalize.css" />
+        <link rel="stylesheet" href="/css/magick.css" />
         <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,9 +26,12 @@
         ` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }} {{ end -}}
         {{- partial "style.html" . -}}
 
+        <!-- Vertical layout for certain page types -->
+        {{ if eq .Type "vert" }} {{ partial "style-vertical.html" . }} {{ end }}
+
         <!-- A partial to be overwritten by the user.
-  Simply place a custom_head.html into
-  your local /layouts/partials-directory -->
+        Simply place a custom_head.html into
+        your local /layouts/partials-directory -->
         {{- partial "custom_head.html" . -}}
     </head>
 
@@ -37,8 +41,8 @@
         <footer>{{- partial "footer.html" . -}}</footer>
 
         <!-- A partial to be overwritten by the user.
-  Simply place a custom_body.html into
-  your local /layouts/partials-directory -->
+        Simply place a custom_body.html into
+        your local /layouts/partials-directory -->
         {{- partial "custom_body.html" . -}}
     </body>
 </html>
