[UPDATE] multiple style update
- remove magick.css in README and style html
- remove redundant whitespaces in home
- modify page title with code blocks
- move <mark> tag to the inside of a link
- increase max-width of body from 720px to 960px

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -7,7 +7,7 @@
         font-family: 'Chivo', sans-serif;
         margin: auto;
         padding: 20px;
-        max-width: 720px;
+        max-width: 960px; /* 720px; */
         text-align: left;
         background-color: #fefefe;
         word-wrap: break-word;
