[ADD] add secret maui page - add style for observablehq block

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -160,6 +160,11 @@
         border-radius: 50%;
     }
 
+    // hide all but the first observablehq cell
+    .observablehq:not(:first-of-type) {
+        display: none;
+    }
+
     @media (prefers-color-scheme: dark) {
         body {
             background-color: #333;
