[REFACTOR] blog reorg in May 2024
- remove ideas related content (page, nav, and slug)
- add links related content (page, nav, and slug) as placeholder
- update home page by adding recent posts
- update now, maui page title format
- update table alignment in setapp post
- update zh index page title (metadata)
- fix issue where first letter is unnecessarily uppercased in tags
- add easter egg in footer.html
- add shortcode for recent blog posts
- add style for table and recent blog post list

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -29,7 +29,7 @@
     <small>
       <div>
         {{ range .Site.Taxonomies.tags }}
-        <a href="{{ .Page.Permalink }}">#{{ .Page.Title }}</a>&nbsp;
+        <a href="{{ .Page.Permalink }}">#{{ .Page.Title | lower}}</a>&nbsp;
         {{ end }}
       </div>
     </small>
