--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,7 +16,7 @@
 <content> {{ .Content }} </content>
 <p>
     {{ range (.GetTerms "tags") }}
-    <a href="{{ .Permalink }}">#{{ .LinkTitle }}</a>
+    <a href="{{ .Permalink }}">#{{ .LinkTitle | lower}}</a>
     {{ end }}
 </p>
 
