--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,10 +1,13 @@
-<a href="{{ "/" | relURL }}">home</a>
+<a href="{{ "/" | relURL }}">/home</a>
 {{ range .Site.Menus.main }}
-<a href="{{ .URL }}">{{ .Name }}</a>
+<a href="{{ .URL }}">{{ "/" | safeHTML }}{{ .Name }}</a>
 {{ end }}
 {{ with .Site.GetPage "/posts" }}
-<a href="{{ "/posts" | relURL }}">posts</a>
+<a href="{{ "/posts" | relURL }}">/posts</a>
 {{ end }}
 {{ with .Site.GetPage "/zh" }}
-<a href="{{ "/zh" | relURL }}">博文</a>
+<a href="{{ "/zh" | relURL }}">/博文</a>
+{{ end }}
+{{ with .Site.GetPage "/links" }}
+<a href="{{ "/links" | relURL }}">/links</a>
 {{ end }}
