[REFACTOR] font update and links removal
- remove links
- rename style-vertical.html to style_vertical.html
- replace Chivo with Atkinson Hyperlegible
- remove magick.css and normalize.css

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -24,7 +24,7 @@
         {{- partial "style.html" . -}}
 
         <!-- Vertical layout for certain page types -->
-        {{ if eq .Type "vert" }} {{ partial "style-vertical.html" . }} {{ end }}
+        {{ if eq .Type "vert" }} {{ partial "style_vertical.html" . }} {{ end }}
 
         <!-- A partial to be overwritten by the user.
         Simply place a custom_head.html into
