--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
 {{ end }}{{ end }}
 
 <!-- Vertical layout for certain page types -->
-{{ if eq .Type "vert" }} {{ partial "style-vertical.html" . }} {{ end }}
+{{ if eq .Type "vert" }} {{ partial "style_vertical.html" . }} {{ end }}
 
 <content> {{ .Content }} </content>
 <p>
