[ADD] add links.rexarski.com in navigation
[UPDATE] now page

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -8,3 +8,4 @@
 {{ with .Site.GetPage "/zh" }}
 <a href="{{ "/zh" | relURL }}">/博文</a>
 {{ end }}
+<a href="{{ "https://links.rexarski.com" }}">/links</a>
