[ADD] add neodb shortcode
[ADD] terminal-frame style
[ADD] add bluesky on index page
[UPDATE] now page from paint text to partial plain text and partial neodb cards

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -216,6 +216,31 @@
         padding: 8px;
     }
 
+    /* terminal-frame -------- start*/
+    .terminal-frame {
+        background-color: #1e1e1e;
+        color: #00ff00;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        font-family: monospace;
+    }
+    .terminal-frame ul {
+        list-style-type: "> ";
+        padding-left: 2
+        margin: none;
+    }
+    .terminal-frame li {
+        margin: none
+    }
+
+    /* Responsive design */
+    @media screen and (max-width: 600px) {
+        .item-card {
+            width: 100%;
+        }
+    }
+
     @media screen and (max-width: 600px) {
         table {
             width: 100%;
