--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,7 @@
-{{ $allPosts := where .Site.RegularPages "Type" "in" (slice "zh" "posts") }} {{ $nonDraftPosts :=
-where $allPosts "Draft" false }} {{ $currentYear := now.Format "2006" }} {{ $postsThisYear := where
-$nonDraftPosts ".Date.Year" (int $currentYear) }}
+{{ $allPosts := where .Site.RegularPages "Type" "in" (slice "zh" "posts") }} {{
+$nonDraftPosts := where $allPosts "Draft" false }} {{ $currentYear := now.Format
+"2006" }} {{ $postsThisYear := where $nonDraftPosts ".Date.Year" (int
+$currentYear) }}
 <strong style="font-family: Wavefont; font-size: 24pt"
     >total posts in {{ $currentYear }}: {{ len $postsThisYear }}</strong
 >
@@ -11,23 +12,27 @@ $nonDraftPosts ".Date.Year" (int $currentYear) }}
         let currentYear = now.getFullYear();
         let startOfYear = new Date(now.getFullYear(), 0, 1);
         let endOfYear = new Date(now.getFullYear(), 11, 31);
-        let totalDays = Math.round((endOfYear - startOfYear) / (1000 * 60 * 60 * 24));
-        let passedDays = Math.round((now - startOfYear) / (1000 * 60 * 60 * 24));
+        let totalDays = Math.round(
+            (endOfYear - startOfYear) / (1000 * 60 * 60 * 24)
+        );
+        let passedDays = Math.round(
+            (now - startOfYear) / (1000 * 60 * 60 * 24)
+        );
         let percentage = Math.round((passedDays / totalDays) * 100);
-        let progressBar = "";
+        let progressBar = '';
         for (var i = 0; i < 20; i++) {
             if (i < percentage / 5) {
-                progressBar += "■";
+                progressBar += '■';
             } else {
-                progressBar += "□";
+                progressBar += '□';
             }
         }
-        document.getElementById("progress").innerText =
-            currentYear + ": " + progressBar + " " + percentage + "% ";
+        document.getElementById('progress').innerText =
+            currentYear + ': ' + progressBar + ' ' + percentage + '% ';
     </script>
 </div>
 
-{{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format "2006"}} ⋅
-<a href="/index.xml">rss</a> ⋅
-<a href="https://github.com/rexarski/rexarski.com">source</a>
+{{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format
+"2006"}} ⋅
+<a href="/index.xml">/RSS</a>
 {{ end }}
