--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,11 +1,16 @@
-<a href="{{ "/" | relURL }}">/home</a>
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+/>
+
+<a href="{{ "/" | relURL }}">/首页</a>
 {{ range .Site.Menus.main }}
 <a href="{{ .URL }}">{{ "/" | safeHTML }}{{ .Name }}</a>
 {{ end }}
 {{ with .Site.GetPage "/posts" }}
-<a href="{{ "/posts" | relURL }}">/posts</a>
+<a href="{{ "/posts" | relURL }}">/博文</a>
 {{ end }}
-{{ with .Site.GetPage "/zh" }}
-<a href="{{ "/zh" | relURL }}">/博文</a>
-{{ end }}
-<a href="{{ "https://links.rexarski.com" }}">/links</a>
+<a href="{{ "https://links.rexarski.com" }}">/链接</a>
+<a href="/index.xml" target="_blank" rel="noopener noreferrer">
+    <i class="fas fa-rss"></i>
+</a>
