[UPDATE] update now page on 2025-02-02
- fix bsky url typo on index page
- add menu attribute in frontmatter of maui page
- add badgebox in footer.html
- update rss in menu render
- update text-align of footer in style.html
- add badge-related css in style.html
- add 3 retro badges

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -35,4 +35,16 @@ $currentYear) }}
 {{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format
 "2006"}} ⋅
 <a href="/index.xml">/RSS</a>
-{{ end }}
+<div class="badgebox">
+    <a href="/index.xml"
+        ><img class="badge" src="/images/rss.gif" alt="rss-badge"
+    /></a>
+    <a href="https://mastodon.social/@rexarski"
+        ><img class="badge" src="/images/mastodon.gif" alt="mastodon-badge"
+    /></a>
+    <a href="https://bsky.app/profile/rqiu.bsky.social"
+        ><img class="badge" src="/images/bluesky.gif" alt="bsky-badge"
+    /></a>
+</div>
+Retro badges made by <a href="https://lmnt.me/badges/">Louie Mantia, Jr.</a> {{
+end }}
