--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,8 +1,3 @@
-<link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-/>
-
 <a href="{{ "/" | relURL }}">/首页</a>
 {{ range .Site.Menus.main }}
 <a href="{{ .URL }}">{{ "/" | safeHTML }}{{ .Name }}</a>
@@ -11,6 +6,4 @@
 <a href="{{ "/posts" | relURL }}">/博文</a>
 {{ end }}
 <a href="{{ "https://links.rexarski.com" }}">/链接</a>
-<a href="/index.xml" target="_blank" rel="noopener noreferrer">
-    <i class="fas fa-rss"></i>
-</a>
+<a href="{{ "/index.xml" }}">/RSS</a>
