[UPDATE] site language to zh-CN - remove comment section - update footer style - add build with in footer - hide rss.html temporarily

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -20,5 +20,5 @@
     {{ end }}
 </p>
 
-{{ if eq .Type "posts" "zh" }} {{ partial "comments.html" . }} {{ end }} {{ end
-}}
+<!--{{ if eq .Type "posts" "zh" }} {{ partial "comments.html" . }} {{ end }}-->
+{{ end }}
