--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -104,7 +104,8 @@
     }
 
     footer {
-        padding: 25px;
+        margin: auto;
+        max-width: 720px; /* 960px; */
         text-align: left;
     }
 
