[UPDATE] now page
- move badge collections from footer to now page
- lowercase nav and now page
- add temporary blog badge

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -33,21 +33,7 @@ $currentYear) }}
 </div>
 
 {{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format
-"2006"}}
-<div class="badgebox">
-    <a href="/index.xml"
-        ><img class="badge" src="/images/rss.gif" alt="rss-badge"
-    /></a>
-    <a href="https://mastodon.social/@rexarski"
-        ><img class="badge" src="/images/mastodon.gif" alt="mastodon-badge"
-    /></a>
-    <a href="https://bsky.app/profile/rqiu.bsky.social"
-        ><img class="badge" src="/images/bluesky.gif" alt="bsky-badge"
-    /></a>
-</div>
-Made with
+"2006"}} Made with
 <a href="https://gohugo.io">Hugo</a> ⋅ Theme by
-<a href="https://github.com/janraasch/hugo-bearblog/">Bearblog</a> ⋅ Retro
-badges made by
-<a href="https://lmnt.me/badges/">Louie Mantia, Jr.</a>
+<a href="https://github.com/janraasch/hugo-bearblog/">Bearblog</a>
 {{ end }}
