--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -6,4 +6,4 @@
 <a href="{{ "/posts" | relURL }}">/博文</a>
 {{ end }}
 <a href="{{ "https://links.rexarski.com" }}">/链接</a>
-<a href="{{ "/index.xml" }}">/RSS</a>
+<a href="{{ "/index.xml" }}">/rss</a>
