--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -33,7 +33,6 @@ $currentYear) }}
 </div>
 
 {{ if ne .Site.Params.hideMadeWithLine true }} © Qiū Ruì 2022-{{ now.Format
-"2006"}} Made with
-<a href="https://gohugo.io">Hugo</a> ⋅ Theme by
-<a href="https://github.com/janraasch/hugo-bearblog/">Bearblog</a>
-{{ end }}
+"2006"}}{{ end }} <br />Made with <a href="https://gohugo.io">Hugo</a> ⋅ Theme
+by <a href="https://github.com/janraasch/hugo-bearblog/">Bearblog</a> ⋅
+<a href="/changelog">Changelog</a>
