--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,9 +1,9 @@
-<a href="{{ "/" | relURL }}">/首页</a>
+<a href="{{ "/" | relURL }}">主页</a>
 {{ range .Site.Menus.main }}
-<a href="{{ .URL }}">{{ "/" | safeHTML }}{{ .Name }}</a>
+<a href="{{ .URL }}">{{ .Name }}</a>
 {{ end }}
 {{ with .Site.GetPage "/posts" }}
-<a href="{{ "/posts" | relURL }}">/博文</a>
+<a href="{{ "/posts" | relURL }}">博文</a>
 {{ end }}
-<a href="{{ "https://links.rexarski.com" }}">/链接</a>
-<a href="{{ "/index.xml" }}">/rss</a>
+<a href="{{ "https://links.rexarski.com" }}">链接</a>
+<a href="{{ "/index.xml" }}">rss</a>
