[UPDATE] enhance media entries and improve blog layout
- Updated media entries (books and games).
- Improved the blog index page layout and updated recent posts logic to show posts from the last 12 months.
- Revised now.md to reflect recent activities and improve formatting.
- Updated font imports in style.html for better typography consistency.

--- a/layouts/partials/style.html
+++ b/layouts/partials/style.html
@@ -1,5 +1,5 @@
 <style>
-    @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Fira+Mono&display=swap&family=Wavefont:wght@200');
+    @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Noto+Sans+Serif+SC:wght@200..900&family=Wavefont:wght@200&family=Victor+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 
     // noto serif sc not used yet
 
@@ -9,7 +9,7 @@
     }
 
     body {
-        font-family: 'Atkinson Hyperlegible', sans-serif;
+        font-family: 'Noto Sans Serif SC', 'Atkinson Hyperlegible', sans-serif;
         margin: auto;
         padding: 20px;
         max-width: 720px; /* 960px; */
@@ -40,7 +40,7 @@
     .title {
         text-decoration: none;
         border: 0;
-        font-family: Fira Mono, monospace;
+        font-family: 'Victor Mono', monospace;
     }
 
     .title span {
@@ -83,7 +83,7 @@
         padding: 20px;
         white-space: pre-wrap;
         font-size: 12px;
-        font-family: 'Fira Mono', monospace;
+        font-family: 'Victor Mono', monospace;
     }
 
     div.highlight pre {
@@ -224,7 +224,7 @@
         padding: 10px;
         border-radius: 5px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        font-family: monospace;
+        font-family: 'JetBrains Mono', monospace;
     }
     .terminal-frame ul {
         list-style-type: "> ";
